@@ -1,6 +1,3 @@
 #!/bin/bash
-# Book Recommender Launcher (Linux/macOS)
-# Simple wrapper to run the JAR application
-
 DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-java -jar "$DIR/BookRecommender.jar" "$@"
+java --module-path "$DIR/lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar "$DIR/BookRecommender.jar" "$@"
